# hpos-api-rust

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: main.yml
resources/test/: config.yaml  host-key.pub  hpos-config.json
src/: consts.rs  handlers.rs  handlers_old.rs  hpos.rs  lib.rs  main.rs  types.rs
src/common/: hbs.rs  keypair.rs  mod.rs  types.rs  utils.rs
src/handlers/: holofuel_redeemable_for_last_week.rs  hosted_happs.rs  mod.rs
src/handlers/hosted_apps/: mod.rs
src/handlers/hosted_apps/install/: helpers.rs  mod.rs  types.rs
src/handlers/install/: helpers.rs  mod.rs  types.rs
src/handlers/register/: mod.rs  types.rs
src/routes/: core_app_version.rs  holofuel_redeemable_for_last_week.rs  host.rs  hosted_happs.rs  mod.rs  zome_call.rs
src/routes/apps/: call_zome.rs  core.rs  hosted.rs  mod.rs  types.rs  zome_call.rs
src/routes/holoport/: usage.rs
src/routes/host/: auth_payload.rs  billing_preferences.rs  earnings.rs  holo_client_auth.rs  hosting_criteria.rs  invoices.rs  keypair.rs  mod.rs  redeemable_histogram.rs  redemptions.rs  shared.rs
tests/: integration.rs  servicelogger_prefs.yaml
tests/utils/: consts.rs  core_apps.rs  mod.rs  types.rs
