[package]
name = "hpos-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base36 = "=0.0.1"
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.0-pre.1" }
env_logger = "0.10.0"
getrandom = "0.2.7"
holochain_keystore = "0.2.6"
holochain_client = "0.4.7-rc.0"
holochain_types = {version = "0.2.6", features = ["chc"]}
holochain_conductor_api = { version = "0.2.6", features = ["chc"]}
holofuel_types = "0.5.6"
hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "1b8722e8591141544606b1793c52c5be0eb959bc" }
holochain_env_setup = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "1b8722e8591141544606b1793c52c5be0eb959bc" }
hpos-config-core = { git = "https://github.com/holo-host/hpos-config.git", rev = "bfaced6044ae570bf20d4528fa9aaafcc43ddeec" }
hpos-config-seed-bundle-explorer = { git = "https://github.com/holo-host/hpos-config.git", rev = "bfaced6044ae570bf20d4528fa9aaafcc43ddeec" }
mr_bundle = "0.2.6"
log = "0.4.17"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0"
serde_bytes = "0.11"
serde_yaml = "0.9.25"
sodoken = "0.0.9"
url2 = "0.0.6"
url = "2.4.0"