[package]
name = "hpos-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base36 = "=0.0.1"
base64 = "0.13.0"
ed25519-dalek = { version = "2.1.1" }
env_logger = "0.10.0"
getrandom = "0.2.7"
holochain_keystore = "0.3.0-beta-dev.36"
holochain_client = " 0.5.0-dev.31"
holochain_websocket = "0.3.0-beta-dev.21"
holochain_types = {version = "0.3.0-beta-dev.42", features = ["chc"]}
holochain_conductor_api = { version = "0.3.0-beta-dev.44", features = ["chc"]}
holofuel_types = "0.5.7"

hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "c593011104e2463a54bd58644b0e007abc305128" }
holochain_env_setup = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "c593011104e2463a54bd58644b0e007abc305128" }
hpos-config-core = { git = "https://github.com/holo-host/hpos-config.git", rev = "a36f862869cc162c843ac27ed617910d68f480cc" }
hpos-config-seed-bundle-explorer = { git = "https://github.com/holo-host/hpos-config.git", rev = "a36f862869cc162c843ac27ed617910d68f480cc" }

mr_bundle = { version = "0.3.0-beta-dev.10" }
log = "0.4.17"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.193"
serde_bytes = "0.11"
serde_yaml = "0.9.25"
sodoken = "0.0.11"
url2 = "0.0.6"
url = "2.4.0"
chrono = "0.4.19"
