[package]
name = "hpos-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base36 = "=0.0.1"
base64 = "0.13.0"
ed25519-dalek = { version = "2.1.1" }
env_logger = "0.10.0"
getrandom = "0.2.7"

holochain_client = "=0.6.0-dev.0"
holochain_keystore = "0.4.0-dev.2"
holochain_types = { version = "0.4.0-dev.2", features = ["chc"] }
holochain_conductor_api = "0.4.0-dev.2"
holochain_websocket = "0.4.0-dev.2"
holofuel_types = "0.5.9"
mr_bundle = "0.4.0-dev.1"

hpos_hc_connect = { path = "../hpos-service-crates/crates/hpos_connect_hc" }
#hpos_hc_connect = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "3183eaedba3b8fa3e85a1eb945b0728ff51f5258" }
holochain_env_setup = { git = "https://github.com/holo-host/hpos-service-crates.git", rev = "3183eaedba3b8fa3e85a1eb945b0728ff51f5258" }
hpos-config-core = { git = "https://github.com/holo-host/hpos-config.git", rev = "a36f862869cc162c843ac27ed617910d68f480cc" }
hpos-config-seed-bundle-explorer = { git = "https://github.com/holo-host/hpos-config.git", rev = "a36f862869cc162c843ac27ed617910d68f480cc" }

log = "0.4.17"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc",] }
serde_bytes = "0.11"
serde_yaml = "0.9.25"
sodoken = "0.0.11"
url2 = "0.0.6"
url = "2.4.0"
chrono = "0.4.19"
reqwest = "0.12.5"
